--- a/frontend/source/components/ChartGrowTotalUnits/style.css
+++ b/frontend/source/components/ChartGrowTotalUnits/style.css
@@ -49,7 +49,7 @@
 }
 
 .table_sales {
-  margin-top:  2rem;
+  padding-top:  2rem;
   font-size: .875rem;
 }
 .table_sales_header {
