--- a/frontend/source/components/ChartLaunchNewProduct/style.css
+++ b/frontend/source/components/ChartLaunchNewProduct/style.css
@@ -39,7 +39,7 @@
 
 
 .table_sales {
-  margin-top:  2rem;
+  padding-top:  2rem;
   font-size: .875rem;
 }
 .table_sales_header {
