--- a/frontend/source/components/ChartUnitsUplift/style.css
+++ b/frontend/source/components/ChartUnitsUplift/style.css
@@ -26,7 +26,7 @@
 
 .table {
   position: relative;
-  margin-top: 1rem;
+  padding-top: 1rem;
   color: #4D4D4D;
 }
 .table_label {
