--- a/frontend/source/components/TablePerformanceSamples/style.css
+++ b/frontend/source/components/TablePerformanceSamples/style.css
@@ -3,7 +3,7 @@
 }
 
 .table_samples {
-  margin-bottom: 1em;
+  padding-bottom: 1em;
   position: relative;
 }
 .table_samples td {
